# dummy-repo

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  COVERAGE_REPORT.md  Makefile  README.md  angular.json  conftest.py  create_sample_data.py  karma.conf.js  mypy.ini  package.json  pyproject.toml  pytest.ini  requirements.txt  validate_coverage.py
core/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py
myproject/: settings.py  test_config.py  urls.py
src/: index.html
src/app/: app.component.spec.ts  app.component.ts
src/app/core/: core.module.ts
src/app/core/guards/: auth.guard.spec.ts
src/app/core/interceptors/: auth.interceptor.spec.ts
src/app/core/services/: api.service.spec.ts  api.service.ts  auth.service.spec.ts  auth.service.ts  notification.service.spec.ts  notification.service.ts
src/app/features/dashboard/components/stats-card/: stats-card.component.html  stats-card.component.spec.ts  stats-card.component.ts
src/app/features/dashboard/dashboard/: dashboard.component.spec.ts  dashboard.component.ts
src/app/features/user-management/user-form/: user-form.component.html  user-form.component.spec.ts  user-form.component.ts
src/app/features/user-management/user-list/: user-list.component.spec.ts
src/app/shared/: shared.module.ts
src/app/shared/components/button/: button.component.spec.ts
src/app/shared/components/form-input/: form-input.component.spec.ts
src/app/shared/pipes/: capitalize.pipe.spec.ts  capitalize.pipe.ts
src/python_placeholder/: __init__.py
templates/: base.html
templates/core/: category_detail.html  edit_profile.html  home.html  post_detail.html  post_list.html  profile.html  search_results.html
templates/registration/: login.html  register.html
tests/: test_sample.py
